[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Константин Рябов <konsstantinryabov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Запрещает объявлять функции без аннотации типов
disallow_untyped_defs = true
# Без этой опции аргументы функции могут иметь тип None в качестве параметра по умолчанию
no_implicit_optional = true
# Помогает не забыть поменять заглушку Any на действительный тип
warn_return_any = true
# Файлы, которые не нужно форматировать
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119